--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.5
   flutter_launcher_icons: ^0.13.1
-
+  equatable: 
+  google_maps_flutter:
+  google_fonts: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -35,7 +37,7 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: assets/icons/app_icon.png
+# flutter_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: assets/icons/app_icon.png
